fixed nav alignment

--- a/main.css
+++ b/main.css
@@ -17,6 +17,10 @@ body {
     text-align: center; 
 }
 
+.main_nav ul {
+    padding: 0;
+}
+
 .main_nav li {
     display: inline;
     padding: 25px;
@@ -25,6 +29,7 @@ body {
 .main_nav a {
     text-decoration: none;
     font-family: 'Arial';
+    font-size: 16px;
 }
 
 #main_image {
@@ -41,7 +46,7 @@ body {
 }
 
 #contact h1 {
-    font-family: 'Merienda', Helvetica; 
+    font-family: 'Merienda', 'Gabriola', Helvetica; 
     font-size: 28px;
     color: palevioletred;
 }
